Added gram gold and quarter gold prices to the db and prisma schema
Changed desing of the kontrol-paneli

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,7 @@ prisma/generated
 prisma/generated/*
 prisma/seed.ts
 prisma/migrations
+altin.py
+altinfiyatlari.json
+altinfiyatlari.xlsx
+postgres_import.py
