--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "seed": "prisma db seed"
+    "seed": "prisma db seed",
+    "update-gold-prices": "node scripts/update-gold-prices.mjs"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.9.0",
