--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,7 @@ prisma/generated/*
 prisma/seed.ts
 prisma/migrations
 altin.py
+crawler.py
 altinfiyatlari.json
 altinfiyatlari.xlsx
 postgres_import.py
@@ -54,3 +55,9 @@ altinfiyatlari_ceyrek.json
 altinfiyatlari_gram.json
 
 
+# Crawler data files
+/data/
+import_historical_data.py
+TCMB_Doviz_Kurlari_Arsiv_2020-01-01_2025-05-06.csv
+update_asset_prices.py
+python/
