Changed the database architecture to use wedding objects instead of a main user, this way people will be able to view a wedding or even edit them if they get a admin role.
Also solved the prisma migrations issues

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Düğünde alınan altın ve para hediyelerini takip etmek için uygulama",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
